// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge Nothing 1`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge Nothing 2`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----37JQY8",
                3542219356,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            3944313558,
          ],
          "r2": [
            {
              "c1": [
                0,
                "Nn1JUF----17JQY8",
                1446822171,
              ],
            },
            "",
            4191704858,
          ],
        },
        "",
        1078894301,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF----27JQY8",
                1710566604,
              ],
            },
            "",
            2387633168,
          ],
        },
        "",
        2259496305,
      ],
    },
    "",
    1487713965,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delRow 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----37JQY8",
                3542219356,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            3944313558,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----57JQY8",
                755827458,
              ],
            },
            "",
            1329262019,
          ],
        },
        "",
        2679874603,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF----27JQY8",
                1710566604,
              ],
            },
            "",
            2387633168,
          ],
        },
        "",
        2259496305,
      ],
    },
    "",
    1080067956,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delTable 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----37JQY8",
                3542219356,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            3944313558,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----57JQY8",
                755827458,
              ],
            },
            "",
            1329262019,
          ],
        },
        "",
        2679874603,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----67JQY8",
                2770824445,
              ],
            },
            "",
            2739128399,
          ],
        },
        "",
        3302670973,
      ],
    },
    "",
    3219077319,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----87JQY8",
                2233415979,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            1310314201,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----57JQY8",
                755827458,
              ],
            },
            "",
            1329262019,
          ],
        },
        "",
        2607466906,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----67JQY8",
                2770824445,
              ],
            },
            "",
            2739128399,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Nn1JUF----97JQY8",
                1134896150,
              ],
            },
            "",
            715241454,
          ],
        },
        "",
        1119084487,
      ],
    },
    "",
    3850442046,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way delValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----87JQY8",
                2233415979,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            1310314201,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----57JQY8",
                755827458,
              ],
            },
            "",
            1329262019,
          ],
        },
        "",
        2607466906,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----67JQY8",
                2770824445,
              ],
            },
            "",
            2739128399,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Nn1JUF----97JQY8",
                1134896150,
              ],
            },
            "",
            715241454,
          ],
        },
        "",
        1119084487,
      ],
    },
    "",
    3850442046,
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----C7JQY8",
        1948246796,
      ],
      "v2": [
        undefined,
        "Nn1JUF----D7JQY8",
        337078407,
      ],
    },
    "",
    601891075,
  ],
]
`;

exports[`Merge One way delValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----87JQY8",
                2233415979,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            1310314201,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----57JQY8",
                755827458,
              ],
            },
            "",
            1329262019,
          ],
        },
        "",
        2607466906,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----67JQY8",
                2770824445,
              ],
            },
            "",
            2739128399,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Nn1JUF----97JQY8",
                1134896150,
              ],
            },
            "",
            715241454,
          ],
        },
        "",
        1119084487,
      ],
    },
    "",
    3850442046,
  ],
  [
    {
      "v1": [
        undefined,
        "Nn1JUF----E7JQY8",
        3241919538,
      ],
      "v2": [
        undefined,
        "Nn1JUF----D7JQY8",
        337078407,
      ],
    },
    "",
    1061160358,
  ],
]
`;

exports[`Merge One way setCell 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----37JQY8",
                3542219356,
              ],
              "c2": [
                0,
                "Nn1JUF----07JQY8",
                2122716678,
              ],
            },
            "",
            2140781224,
          ],
          "r2": [
            {
              "c1": [
                0,
                "Nn1JUF----17JQY8",
                1446822171,
              ],
            },
            "",
            4191704858,
          ],
        },
        "",
        3252890575,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF----27JQY8",
                1710566604,
              ],
            },
            "",
            2387633168,
          ],
        },
        "",
        2259496305,
      ],
    },
    "",
    3772721336,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way setCell 2 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----37JQY8",
                3542219356,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            3944313558,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----57JQY8",
                755827458,
              ],
            },
            "",
            1329262019,
          ],
        },
        "",
        2679874603,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----67JQY8",
                2770824445,
              ],
            },
            "",
            2739128399,
          ],
          "r2": [
            {
              "c2": [
                2,
                "Nn1JUF----77JQY8",
                3244906135,
              ],
            },
            "",
            2651084709,
          ],
        },
        "",
        1404428920,
      ],
    },
    "",
    1621546363,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way setTables 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
              "c2": [
                0,
                "Nn1JUF----07JQY8",
                2122716678,
              ],
            },
            "",
            4146662826,
          ],
          "r2": [
            {
              "c1": [
                0,
                "Nn1JUF----17JQY8",
                1446822171,
              ],
            },
            "",
            4191704858,
          ],
        },
        "",
        3158541343,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF----27JQY8",
                1710566604,
              ],
            },
            "",
            2387633168,
          ],
        },
        "",
        2259496305,
      ],
    },
    "",
    4235792867,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge One way setValue 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----87JQY8",
                2233415979,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            1310314201,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----57JQY8",
                755827458,
              ],
            },
            "",
            1329262019,
          ],
        },
        "",
        2607466906,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----67JQY8",
                2770824445,
              ],
            },
            "",
            2739128399,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Nn1JUF----97JQY8",
                1134896150,
              ],
            },
            "",
            715241454,
          ],
        },
        "",
        1119084487,
      ],
    },
    "",
    3850442046,
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----C7JQY8",
        1948246796,
      ],
      "v2": [
        0,
        "Nn1JUF----B7JQY8",
        3241789084,
      ],
    },
    "",
    2537853862,
  ],
]
`;

exports[`Merge One way setValues 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----87JQY8",
                2233415979,
              ],
              "c2": [
                undefined,
                "Nn1JUF----47JQY8",
                3100461399,
              ],
            },
            "",
            1310314201,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----57JQY8",
                755827458,
              ],
            },
            "",
            1329262019,
          ],
        },
        "",
        2607466906,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----67JQY8",
                2770824445,
              ],
            },
            "",
            2739128399,
          ],
          "r2": [
            {
              "c2": [
                undefined,
                "Nn1JUF----97JQY8",
                1134896150,
              ],
            },
            "",
            715241454,
          ],
        },
        "",
        1119084487,
      ],
    },
    "",
    3850442046,
  ],
  [
    {
      "v1": [
        0,
        "Nn1JUF----A7JQY8",
        1614416747,
      ],
      "v2": [
        0,
        "Nn1JUF----B7JQY8",
        3241789084,
      ],
    },
    "",
    238386913,
  ],
]
`;

exports[`Merge Two way Causality 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Nn1JUF----14JQFF",
                1095759933,
              ],
            },
            "",
            496613801,
          ],
        },
        "",
        4093794032,
      ],
    },
    "",
    173826761,
  ],
  [
    {
      "v1": [
        2,
        "Nn1JUF----24JQFF",
        3217479738,
      ],
    },
    "",
    2501030979,
  ],
]
`;

exports[`Merge Two way Causality 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Nn1JUF----37JQY8",
                682158398,
              ],
            },
            "",
            3540324910,
          ],
        },
        "",
        4062614921,
      ],
    },
    "",
    3615127835,
  ],
  [
    {
      "v1": [
        3,
        "Nn1JUF----47JQY8",
        843553981,
      ],
    },
    "",
    386111204,
  ],
]
`;

exports[`Merge Two way Conflict 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF-----7JQY8",
                1003668370,
              ],
            },
            "",
            550994372,
          ],
        },
        "",
        1072852846,
      ],
    },
    "",
    1771939739,
  ],
  [
    {
      "v0": [
        0,
        "Nn1JUF----07JQY8",
        2122716678,
      ],
      "v1": [
        1,
        "Nn1JUF----17JQY8",
        32419862,
      ],
    },
    "",
    2575261431,
  ],
]
`;

exports[`Merge Two way Conflict 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Nn1JUF0----4JQFF",
                2941533140,
              ],
            },
            "",
            3925016800,
          ],
        },
        "",
        1318000614,
      ],
    },
    "",
    1398390790,
  ],
  [
    {
      "v1": [
        2,
        "Nn1JUF0---04JQFF",
        1511689505,
      ],
    },
    "",
    343217883,
  ],
]
`;

exports[`Merge Two way Conflict 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                2,
                "Nn1JUF0----4JQFF",
                2941533140,
              ],
            },
            "",
            3925016800,
          ],
        },
        "",
        1318000614,
      ],
    },
    "",
    1398390790,
  ],
  [
    {
      "v0": [
        0,
        "Nn1JUF----07JQY8",
        2122716678,
      ],
      "v1": [
        2,
        "Nn1JUF0---04JQFF",
        1511689505,
      ],
    },
    "",
    4043341131,
  ],
]
`;

exports[`Merge Two way Interleaving 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF1----7JQY8",
                98669398,
              ],
            },
            "",
            1246121486,
          ],
        },
        "",
        379796023,
      ],
    },
    "",
    2233768696,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge Two way Interleaving 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                2,
                "Nn1JUF0----4JQFF",
                2941533140,
              ],
            },
            "",
            3436748874,
          ],
        },
        "",
        1975202396,
      ],
    },
    "",
    372774272,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF-----7JQY8",
                1003668370,
              ],
            },
            "",
            550994372,
          ],
        },
        "",
        1072852846,
      ],
    },
    "",
    1771939739,
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----07JQY8",
        1130939691,
      ],
    },
    "",
    3877632732,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c2": [
                2,
                "Nn1JUF0----4JQFF",
                2941533140,
              ],
            },
            "",
            3436748874,
          ],
          "r2": [
            {
              "c2": [
                2,
                "Nn1JUF0---04JQFF",
                1511689505,
              ],
            },
            "",
            3321469275,
          ],
        },
        "",
        3158505799,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Nn1JUF0---14JQFF",
                2535228096,
              ],
            },
            "",
            934787510,
          ],
        },
        "",
        17790717,
      ],
    },
    "",
    1543563996,
  ],
  [
    {
      "v2": [
        2,
        "Nn1JUF0---24JQFF",
        4112684423,
      ],
    },
    "",
    3160728719,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables & values 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF-----7JQY8",
                1003668370,
              ],
              "c2": [
                2,
                "Nn1JUF0----4JQFF",
                2941533140,
              ],
            },
            "",
            3960414606,
          ],
          "r2": [
            {
              "c2": [
                2,
                "Nn1JUF0---04JQFF",
                1511689505,
              ],
            },
            "",
            3321469275,
          ],
        },
        "",
        3076486208,
      ],
      "t2": [
        {
          "r2": [
            {
              "c2": [
                2,
                "Nn1JUF0---14JQFF",
                2535228096,
              ],
            },
            "",
            934787510,
          ],
        },
        "",
        17790717,
      ],
    },
    "",
    76855736,
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----07JQY8",
        1130939691,
      ],
      "v2": [
        2,
        "Nn1JUF0---24JQFF",
        4112684423,
      ],
    },
    "",
    1534795347,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
            },
            "",
            2900070012,
          ],
        },
        "",
        2912656745,
      ],
    },
    "",
    2267182383,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 2`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {
      "v1": [
        0,
        "Nn1JUF0----4JQFF",
        3097216234,
      ],
    },
    "",
    2180678093,
  ],
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
            },
            "",
            2900070012,
          ],
        },
        "",
        2912656745,
      ],
    },
    "",
    2267182383,
  ],
  [
    {
      "v1": [
        0,
        "Nn1JUF0----4JQFF",
        3097216234,
      ],
    },
    "",
    2180678093,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent apply into empty store 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000008DKS9",
                4065945599,
              ],
            },
            "Hc2DO@000008DKS9",
            1279994494,
          ],
        },
        "Hc2DO@000008DKS9",
        1293085726,
      ],
    },
    "Hc2DO@000008DKS9",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000008DKS9",
        4065945599,
      ],
    },
    "Hc2DO@000008DKS9",
    2304392760,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent apply over existing content 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c0": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "Hc2DO@000018DKS9",
            2230416255,
          ],
        },
        "Hc2DO@000018DKS9",
        123935377,
      ],
    },
    "Hc2DO@000018DKS9",
    3790108107,
  ],
  [
    {
      "v0": [
        0,
        "Nn1JUF----07JQY8",
        2122716678,
      ],
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "Hc2DO@000018DKS9",
    1782145011,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set default 1`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "",
                401433231,
              ],
            },
            "",
            2660078143,
          ],
        },
        "",
        2466603274,
      ],
    },
    "",
    471459239,
  ],
  [
    {
      "v0": [
        0,
        "",
        401433231,
      ],
    },
    "",
    30487211,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set into empty store 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF-----7JQY8",
                1003668370,
              ],
            },
            "",
            1279994494,
          ],
        },
        "",
        1293085726,
      ],
    },
    "",
    4033596827,
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF-----7JQY8",
        1003668370,
      ],
    },
    "",
    2304392760,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set over existing content 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
            },
            "",
            1254797189,
          ],
        },
        "",
        423436526,
      ],
    },
    "",
    639574078,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    2404136035,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set over existing content 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                3207404266,
              ],
              "c2": [
                2,
                "Nn1JUF----17JQY8",
                1804136345,
              ],
            },
            "",
            2799755668,
          ],
        },
        "",
        4181335867,
      ],
    },
    "",
    2617611773,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        3207404266,
      ],
    },
    "",
    2404136035,
  ],
]
`;

exports[`applyMergeableChanges/setMergeableContent set with wrong hashes 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Hc2DO@000018DKS9",
                1,
              ],
            },
            "0",
            2,
          ],
        },
        "",
        3,
      ],
    },
    "",
    4,
  ],
  [
    {
      "v1": [
        1,
        "Hc2DO@000018DKS9",
        5,
      ],
    },
    "",
    6,
  ],
]
`;

exports[`getMergeableContent Empty transaction 1`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`getMergeableContent Initialize 1`] = `
[
  [
    {},
    "",
    0,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`getMergeableContent Mutate 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----57JQY8",
                2292049306,
              ],
              "c2": [
                undefined,
                "Nn1JUF----67JQY8",
                2770824445,
              ],
            },
            "",
            3247398046,
          ],
          "r2": [
            {
              "c1": [
                undefined,
                "Nn1JUF----77JQY8",
                1267840296,
              ],
            },
            "",
            3814730259,
          ],
        },
        "",
        2363482881,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----87JQY8",
                2233415979,
              ],
            },
            "",
            2171307377,
          ],
        },
        "",
        740108292,
      ],
    },
    "",
    2807445849,
  ],
  [
    {
      "v1": [
        5,
        "Nn1JUF----97JQY8",
        2052766482,
      ],
      "v2": [
        undefined,
        "Nn1JUF----A7JQY8",
        34812334,
      ],
    },
    "",
    2935493130,
  ],
]
`;

exports[`getMergeableContent Set in sequence 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
              "c2": [
                1,
                "Nn1JUF----07JQY8",
                1130939691,
              ],
            },
            "",
            454538608,
          ],
          "r2": [
            {
              "c1": [
                2,
                "Nn1JUF----17JQY8",
                1804136345,
              ],
            },
            "",
            1353168687,
          ],
        },
        "",
        2392702936,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Nn1JUF----27JQY8",
                1448335763,
              ],
            },
            "",
            988812734,
          ],
        },
        "",
        1156017814,
      ],
    },
    "",
    1786649756,
  ],
  [
    {
      "v1": [
        4,
        "Nn1JUF----37JQY8",
        1850569669,
      ],
      "v2": [
        5,
        "Nn1JUF----47JQY8",
        2360944571,
      ],
    },
    "",
    3491962196,
  ],
]
`;

exports[`getMergeableContent Set together 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
              "c2": [
                1,
                "Nn1JUF----07JQY8",
                1130939691,
              ],
            },
            "",
            454538608,
          ],
          "r2": [
            {
              "c1": [
                2,
                "Nn1JUF----17JQY8",
                1804136345,
              ],
            },
            "",
            1353168687,
          ],
        },
        "",
        2392702936,
      ],
      "t2": [
        {
          "r1": [
            {
              "c1": [
                3,
                "Nn1JUF----27JQY8",
                1448335763,
              ],
            },
            "",
            988812734,
          ],
        },
        "",
        1156017814,
      ],
    },
    "",
    1786649756,
  ],
  [
    {
      "v1": [
        4,
        "Nn1JUF----37JQY8",
        1850569669,
      ],
      "v2": [
        5,
        "Nn1JUF----47JQY8",
        2360944571,
      ],
    },
    "",
    3491962196,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 1`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Nn1JUF-----7JQY8",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 2`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
            },
            "",
            3460029690,
          ],
        },
        "",
        2832193374,
      ],
    },
    "",
    1910663673,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 3`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----07JQY8",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 4`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
            },
            "",
            3460029690,
          ],
        },
        "",
        2832193374,
      ],
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----07JQY8",
                1130939691,
              ],
            },
            "",
            73423994,
          ],
        },
        "",
        1148445215,
      ],
    },
    "",
    2808714262,
  ],
  [
    {},
    "",
    0,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 5`] = `
[
  [
    {},
  ],
  [
    {
      "v0": [
        0,
        "Nn1JUF----17JQY8",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 6`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
            },
            "",
            3460029690,
          ],
        },
        "",
        2832193374,
      ],
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----07JQY8",
                1130939691,
              ],
            },
            "",
            73423994,
          ],
        },
        "",
        1148445215,
      ],
    },
    "",
    2808714262,
  ],
  [
    {
      "v0": [
        0,
        "Nn1JUF----17JQY8",
        1446822171,
      ],
    },
    "",
    1758036066,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 7`] = `
[
  [
    {},
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----27JQY8",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 8`] = `
[
  [
    {
      "t0": [
        {
          "r0": [
            {
              "c0": [
                0,
                "Nn1JUF-----7JQY8",
                3717838775,
              ],
            },
            "",
            3460029690,
          ],
        },
        "",
        2832193374,
      ],
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF----07JQY8",
                1130939691,
              ],
            },
            "",
            73423994,
          ],
        },
        "",
        1148445215,
      ],
    },
    "",
    2808714262,
  ],
  [
    {
      "v0": [
        0,
        "Nn1JUF----17JQY8",
        1446822171,
      ],
      "v1": [
        1,
        "Nn1JUF----27JQY8",
        3453391889,
      ],
    },
    "",
    3407157171,
  ],
]
`;

exports[`getTransactionMergeableChanges After multiple transactions 9`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After net noop transaction 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----17JQY8",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        undefined,
        "Nn1JUF----27JQY8",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After net noop transaction 2`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After transaction 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF-----7JQY8",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----07JQY8",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges After transaction 2`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges During and after transaction 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF-----7JQY8",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----07JQY8",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges During and after transaction 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF-----7JQY8",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----07JQY8",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges During and after transaction 3`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Inside net noop transaction 1`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                1,
                "Nn1JUF-----7JQY8",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        1,
        "Nn1JUF----07JQY8",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Inside net noop transaction 2`] = `
[
  [
    {
      "t1": [
        {
          "r1": [
            {
              "c1": [
                undefined,
                "Nn1JUF----17JQY8",
              ],
            },
          ],
        },
      ],
    },
  ],
  [
    {
      "v1": [
        undefined,
        "Nn1JUF----27JQY8",
      ],
    },
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Inside net noop transaction 3`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Inside noop transaction 1`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;

exports[`getTransactionMergeableChanges Outside transaction 1`] = `
[
  [
    {},
  ],
  [
    {},
  ],
  1,
]
`;
